# wazzapi-py

./: .env.example  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  authentication.md  client.md  contacts.md  devices.md  errors.md  groups.md  media.md  messages.md  templates.md  webhooks.md
examples/: create_template.py  list_contacts.py  list_devices.py  preview_template.py  send_message.py  verify_webhook.py
tests/: smoke_test.py  test_client.py  test_groups.py  test_media.py  test_resources.py  test_webhooks.py
wazzapi/: __init__.py  client.py  errors.py  media.py  webhooks.py
wazzapi/models/: __init__.py  base.py  contacts.py  devices.py  groups.py  media.py  messages.py  templates.py  webhooks.py
wazzapi/resources/: __init__.py  base.py  contacts.py  devices.py  groups.py  messages.py  templates.py
