[project]
name = "wazzapi"
version = "0.1.2"
description = "Typed Python SDK for WazzAPI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["api", "sdk", "wazzapi", "webhook", "whatsapp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=44.0,<45.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.11,<3.0",
]

[project.urls]
Homepage = "https://github.com/wazzapihq/wazzapi-py"
API = "https://api.wazzapi.com"

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "twine>=6.1,<7.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wazzapi"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/examples",
  "/pyproject.toml",
  "/tests",
  "/wazzapi",
]

[tool.pytest]
python_files = ["test_*.py"]
testpaths = ["tests"]
asyncio_mode = "auto"
